--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#361859" />
+    <meta name="author" content="Jairo Rocha" />
+    <meta name="keywords" content="Space, html, css, javascript, frontend" />
+    <meta name="description" content="Responsive website made with html, css, javascript" />
+    <meta name="title" content="Space | Responsive website made with html, css, javascript" />
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +17,19 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" href="assets/img/favicon.png" type="image/png" />
-    <title>Responsive website made with html, css, javascript</title>
+    <title>Space | Responsive website made with html, css, javascript</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jairochabr.github.io/space-website/" />
+    <meta property="og:title" content="Space website" />
+    <meta property="og:description" content="Responsive website made with html, css, javascript" />
+    <meta property="og:image" content="" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jairochabr.github.io/space-website/" />
+    <meta property="twitter:title" content="Space website" />
+    <meta property="twitter:description" content="Responsive website made with html, css, javascript" />
+    <meta property="twitter:image" content="" />
   </head>
   <body>
 
